Bug 171733 - Invisible flag does not persist after a status change
Summary: Invisible flag does not persist after a status change
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-27 11:32 UTC by Will Stephenson
Modified: 2009-01-24 19:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2008-09-27 11:32:44 UTC
Version:            (using Devel)
Installed from:    Compiled sources

66692 is back 

available->available+invis->away causes the invis flag to be lost
Comment 1 Will Stephenson 2008-09-27 11:36:56 UTC
http://bugs.kde.org/show_bug.cgi?id=117304 conflicts. 

It should be possible to change the ICQ local state and keep invisible status.
Comment 2 Alberto Gonzalez 2009-01-17 21:06:47 UTC
This is indeed a problem because if you're invisible on ICQ and you leave the computer for a while, after a few minutes it will change status to away (correct) but visible (incorrect). That is, suddenly you can be seen by others as away. And when you return you're set as available (visible).

Using Kopete 4.1.96.
Comment 3 Roman Jarosz 2009-01-19 19:58:13 UTC
SVN commit 913700 by rjarosz:

Fix bug 171733: Invisible flag does not persist after a status change.
Auto away and account status menu will not change the invisible flag, 
the main status menu will.

BUG: 171733
BUG: 159908



 M  +1 -1      kopete/chatwindow/tests/chatwindowstylerendering_test.cpp  
 M  +1 -1      kopete/config/chatwindow/chatwindowconfig.cpp  
 M  +3 -3      kopete/statusmenu/kopetestatusrootaction.cpp  
 M  +15 -1     libkopete/kopeteaccount.h  
 M  +3 -3      libkopete/kopetestatusmanager.cpp  
 M  +1 -1      libkopete/tests/mock/kopeteaccount_mock.cpp  
 M  +2 -1      libkopete/tests/mock/kopeteaccount_mock.h  
 M  +1 -1      protocols/bonjour/bonjouraccount.cpp  
 M  +2 -1      protocols/bonjour/bonjouraccount.h  
 M  +1 -1      protocols/gadu/gaduaccount.cpp  
 M  +2 -1      protocols/gadu/gaduaccount.h  
 M  +1 -1      protocols/groupwise/gwaccount.cpp  
 M  +2 -1      protocols/groupwise/gwaccount.h  
 M  +1 -1      protocols/irc/ircaccount.cpp  
 M  +2 -1      protocols/irc/ircaccount.h  
 M  +1 -1      protocols/jabber/jabberaccount.cpp  
 M  +2 -1      protocols/jabber/jabberaccount.h  
 M  +1 -1      protocols/jabber/jabbertransport.cpp  
 M  +2 -1      protocols/jabber/jabbertransport.h  
 M  +1 -1      protocols/meanwhile/meanwhileaccount.cpp  
 M  +2 -1      protocols/meanwhile/meanwhileaccount.h  
 M  +1 -1      protocols/msn/msnaccount.cpp  
 M  +2 -1      protocols/msn/msnaccount.h  
 M  +6 -2      protocols/oscar/aim/aimaccount.cpp  
 M  +2 -1      protocols/oscar/aim/aimaccount.h  
 M  +8 -2      protocols/oscar/icq/icqaccount.cpp  
 M  +2 -1      protocols/oscar/icq/icqaccount.h  
 M  +1 -1      protocols/qq/qqaccount.cpp  
 M  +2 -1      protocols/qq/qqaccount.h  
 M  +1 -1      protocols/sms/smsaccount.cpp  
 M  +2 -1      protocols/sms/smsaccount.h  
 M  +1 -1      protocols/telepathy/telepathyaccount.cpp  
 M  +2 -1      protocols/telepathy/telepathyaccount.h  
 M  +1 -1      protocols/testbed/testbedaccount.cpp  
 M  +2 -1      protocols/testbed/testbedaccount.h  
 M  +1 -1      protocols/winpopup/wpaccount.cpp  
 M  +2 -1      protocols/winpopup/wpaccount.h  
 M  +2 -1      protocols/wlm/wlmaccount.cpp  
 M  +2 -2      protocols/wlm/wlmaccount.h  
 M  +1 -1      protocols/yahoo/yahooaccount.cpp  
 M  +2 -1      protocols/yahoo/yahooaccount.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=913700
Comment 4 Roman Jarosz 2009-01-19 19:58:48 UTC
SVN commit 913702 by rjarosz:

Backport fix for bug 171733: Invisible flag does not persist after a status change.
Auto away and account status menu will not change the invisible flag,
the main status menu will.

CCBUG: 171733
CCBUG: 159908



 M  +1 -1      kopete/chatwindow/tests/chatwindowstylerendering_test.cpp  
 M  +1 -1      kopete/config/chatwindow/chatwindowconfig.cpp  
 M  +3 -3      kopete/statusmenu/kopetestatusrootaction.cpp  
 M  +15 -1     libkopete/kopeteaccount.h  
 M  +3 -3      libkopete/kopetestatusmanager.cpp  
 M  +1 -1      libkopete/tests/mock/kopeteaccount_mock.cpp  
 M  +2 -1      libkopete/tests/mock/kopeteaccount_mock.h  
 M  +1 -1      protocols/bonjour/bonjouraccount.cpp  
 M  +2 -1      protocols/bonjour/bonjouraccount.h  
 M  +1 -1      protocols/gadu/gaduaccount.cpp  
 M  +2 -1      protocols/gadu/gaduaccount.h  
 M  +1 -1      protocols/groupwise/gwaccount.cpp  
 M  +2 -1      protocols/groupwise/gwaccount.h  
 M  +1 -1      protocols/irc/ircaccount.cpp  
 M  +2 -1      protocols/irc/ircaccount.h  
 M  +1 -1      protocols/jabber/jabberaccount.cpp  
 M  +2 -1      protocols/jabber/jabberaccount.h  
 M  +1 -1      protocols/jabber/jabbertransport.cpp  
 M  +2 -1      protocols/jabber/jabbertransport.h  
 M  +1 -1      protocols/meanwhile/meanwhileaccount.cpp  
 M  +2 -1      protocols/meanwhile/meanwhileaccount.h  
 M  +1 -1      protocols/msn/msnaccount.cpp  
 M  +2 -1      protocols/msn/msnaccount.h  
 M  +6 -2      protocols/oscar/aim/aimaccount.cpp  
 M  +2 -1      protocols/oscar/aim/aimaccount.h  
 M  +8 -2      protocols/oscar/icq/icqaccount.cpp  
 M  +2 -1      protocols/oscar/icq/icqaccount.h  
 M  +1 -1      protocols/qq/qqaccount.cpp  
 M  +2 -1      protocols/qq/qqaccount.h  
 M  +1 -1      protocols/sms/smsaccount.cpp  
 M  +2 -1      protocols/sms/smsaccount.h  
 M  +1 -1      protocols/telepathy/telepathyaccount.cpp  
 M  +2 -1      protocols/telepathy/telepathyaccount.h  
 M  +1 -1      protocols/testbed/testbedaccount.cpp  
 M  +2 -1      protocols/testbed/testbedaccount.h  
 M  +1 -1      protocols/winpopup/wpaccount.cpp  
 M  +2 -1      protocols/winpopup/wpaccount.h  
 M  +2 -1      protocols/wlm/wlmaccount.cpp  
 M  +2 -2      protocols/wlm/wlmaccount.h  
 M  +1 -1      protocols/yahoo/yahooaccount.cpp  
 M  +2 -1      protocols/yahoo/yahooaccount.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=913702
Comment 5 Alberto Gonzalez 2009-01-24 19:50:46 UTC
I finally could test this today and it is certainly fixed here.

Thank you!