Fix bug 171733: Invisible flag does not persist after a status change. Auto away and account status menu will not change the invisible flag, the main status menu will.

BUG: 171733
BUG: 159908


svn path=/trunk/KDE/kdenetwork/kopete/; revision=913700