protocols/jabber/jabbertransport.h
@@ -89,7 +89,8 @@ public:
 public slots:
 
 	/* Reimplemented from Kopete::Account */
-	void setOnlineStatus( const Kopete::OnlineStatus& status , const Kopete::StatusMessage &reason = Kopete::StatusMessage());
+	void setOnlineStatus( const Kopete::OnlineStatus& status , const Kopete::StatusMessage &reason = Kopete::StatusMessage(),
+	                      const OnlineStatusOptions& options = None );
 	void setStatusMessage( const Kopete::StatusMessage &statusMessage );
 	/**
 	 * the account has been unregistered.
