protocols/oscar/icq/icqaccount.cpp
@@ -424,7 +424,7 @@ void ICQAccount::setPresenceXStatus( const Xtraz::Status &xStatus )
 	setPresenceTarget( pres, statusMessage );
 }
 
-void ICQAccount::setOnlineStatus( const Kopete::OnlineStatus& status, const Kopete::StatusMessage &reason )
+void ICQAccount::setOnlineStatus( const Kopete::OnlineStatus& status, const Kopete::StatusMessage &reason, const OnlineStatusOptions& options )
 {
 	if ( status.status() == Kopete::OnlineStatus::Invisible )
 	{
@@ -443,7 +443,13 @@ void ICQAccount::setOnlineStatus( const Kopete::OnlineStatus& status, const Kope
 	}
 	else
 	{
-		setPresenceTarget( protocol()->statusManager()->presenceOf( status ), reason );
+		Oscar::Presence pres = protocol()->statusManager()->presenceOf( status );
+		if ( options & Kopete::Account::KeepSpecialFlags )
+		{
+			pres.setFlags( presence().flags() );
+			pres.setXtrazStatus( presence().xtrazStatus() );
+		}
+		setPresenceTarget( pres, reason );
 	}
 }
 
