protocols/testbed/testbedaccount.h
@@ -58,7 +58,8 @@ public:
 	/**
 	 * Called when Kopete status is changed globally
 	 */
-	virtual void setOnlineStatus(const Kopete::OnlineStatus& status , const Kopete::StatusMessage &reason = Kopete::StatusMessage() );
+	virtual void setOnlineStatus(const Kopete::OnlineStatus& status , const Kopete::StatusMessage &reason = Kopete::StatusMessage(),
+	                             const OnlineStatusOptions& options = None);
 	virtual void setStatusMessage(const Kopete::StatusMessage& statusMessage);
 	/**
 	 * 'Connect' to the testbed server.  Only sets myself() online.
